--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v3
         with:
-          root_file: main.tex
+          root_file: paulbrenker.tex
 
       - name: Upload PDF as Artifact
         uses: actions/upload-artifact@v4
