trying to fix release

--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -60,5 +60,4 @@ jobs:
         with:
           tag_name: v2.${{ github.run_number }}
           name: "Release v0.${{ github.run_number }}"
-          files: |
-            paulbrenker.pdf
+          files: paulbrenker.pdf
