--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -52,6 +52,9 @@ jobs:
           name: CV
           path: ./paulbrenker.pdf
 
+      - name: Move PDF to root
+        run: mv ./paulbrenker/* ./paulbrenker.pdf
+
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v2
