--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -50,7 +50,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: CV
-          path: ./paulbrenker.pdf
+          path: ./paulbrenker
 
       - name: Move PDF to root
         run: mv ./paulbrenker/* ./paulbrenker.pdf
