--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -24,13 +24,13 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v3
         with:
-          root_file: paulbrenker.tex
+          root_file: *.tex
 
       - name: Upload PDF as Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: CV
-          path: paulbrenker.pdf
+          name: Documents
+          path: *.pdf
 
   release:
     name: Release
@@ -49,7 +49,7 @@ jobs:
       - name: Download CV
         uses: actions/download-artifact@v4
         with:
-          name: CV
+          name: Documents
 
       - name: Create Release
         id: create_release
@@ -59,4 +59,4 @@ jobs:
         with:
           tag_name: v2.${{ github.run_number }}
           name: "Release v0.${{ github.run_number }}"
-          files: paulbrenker.pdf
+          files: *.pdf
